update filter page of order